# stm32-sdio-fat32

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  load_stm_data.sh  main.c
allocator/: CMakeLists.txt  pool_memory.c
drivers/core/: CMakeLists.txt  IRQ.c  IRQ.h  board_pins.h  gpio.h  rcc.c  rcc.h  sdio.c  timer.c  timer.h
drivers/devices/SD/: SD.c  SD.h
filesystem/: CMakeLists.txt
filesystem/FAT32/: CMakeLists.txt
filesystem/FAT32/src/: FAT.c  FAT.h  log_fat32.h  log_stm.c
logger/: log.c  log.h
middleware/: CMakeLists.txt  log_stm.c  log_stm.h  sd_fat32.c  sd_fat32.h  sd_fat32_test.c  sd_fat32_test.h  usart_board.c  usart_board.h
